--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-sentence-transformers==2.2.2  
+sentence-transformers  
 langchain
 flask
 pypdf
@@ -7,6 +7,8 @@ pinecone[grpc]
 langchain-pinecone
 langchain_community
 langchain_openai
+google-generativeai 
+langchain-google-genai
 langchain_experimental
 -e . # connecting to setup.py
 
